# grf2txt

./: .gitignore  Makefile  pyproject.toml  readme.md
grf2txt/: __main__.py  binreader.py  grfstrings.py  langdata.py  newgrf.py
tests/: test_newgrf.py
tests/test_data/: test.nml
tests/test_data/lang/: english.lng  german.lng
